hub-chart/templates/odm-authentication.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odm-authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odm-authentication
  template:
    metadata:
      labels:
        app: odm-authentication
    spec:
      containers:
        - name: odm-authentication
          image: islem12/odm-authentication:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8090
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
          readinessProbe:
            tcpSocket:
              port: 8090
            initialDelaySeconds: 15
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: odm-authentication
spec:
  selector:
    app: odm-authentication
  ports:
    - port: 8090
      targetPort: 8090
